Made a generalized Dantzig selector function and fixed some of the MU Selector bugs

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -1,6 +1,5 @@
 @article{loh2012,
 author = "Loh, Po-Ling and Wainwright, Martin J.",
-doi = "10.1214/12-AOS1018",
 fjournal = "The Annals of Statistics",
 journal = "Ann. Statist.",
 month = "06",
@@ -8,14 +7,11 @@ number = "3",
 pages = "1637--1664",
 publisher = "The Institute of Mathematical Statistics",
 title = "High-dimensional regression with noisy and missing data: Provable guarantees with nonconvexity",
-url = "https://doi.org/10.1214/12-AOS1018",
 volume = "40",
 year = "2012"
 }
 
 @article{sorensen2015,
- ISSN = {10170405, 19968507},
- URL = {http://www.jstor.org/stable/24311046},
  author = {Oystein Sorensen and Arnoldo Frigessi and Magne Thoresen},
  journal = {Statistica Sinica},
  number = {2},
@@ -40,12 +36,10 @@ year = "2012"
 @book{hastie2009,
   author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
   edition = 2,
-  file = {:Books\\HastieTibshiraniFriedman-09-Elements-of-Statistical-Learning-2nd-edition\\hastie_09_elements-of.statistical-learning.pdf:PDF},
   keywords = {inference mathmatics dataanalysis method clutering statistics},
   publisher = {Springer},
   timestamp = {2010-06-03T15:15:09.000+0200},
   title = {The elements of statistical learning: data mining, inference and prediction},
-  url = {http://www-stat.stanford.edu/~tibs/ElemStatLearn/},
   year = 2009
 }
 
@@ -60,8 +54,6 @@ year = "2012"
   journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
   keywords = {},
   pages = {267--288},
-  publisher = {JSTOR},
-  timestamp = {2012-04-13T20:31:42.000+0200},
   title = {{Regression shrinkage and selection via the Lasso}},
   username = {aude.hofleitner},
   year = 1996
@@ -75,30 +67,15 @@ year = "2012"
     year = {2011},
     volume = {39},
     number = {5},
-    pages = {1--13},
-    url = {http://www.jstatsoft.org/v39/i05/},
+    pages = {1--13}
   }
 
 
 @book{buhlmann2011,
-  added-at = {2015-10-26T17:46:38.000+0100},
   author = {B{\"u}hlmann, Peter and van de Geer, Sara},
-  biburl = {https://www.bibsonomy.org/bibtex/2e297610dfd246f9d5e1f71f384a5a16d/for916},
-  doi = {10.1007/978-3-642-20192-9},
-  interhash = {58ab4a66f0f1996de8d2580b55daa693},
-  intrahash = {e297610dfd246f9d5e1f71f384a5a16d},
-  isbn = {978-3-642-20191-2},
-  keywords = {c1},
-  mrclass = {62-07 (60E15 62G05 62G20 62G30 62H30 62J07)},
-  mrnumber = {2807761 (2012e:62006)},
-  mrreviewer = {Pierre Alquier},
-  note = {Methods, theory and applications},
-  pages = {xviii+556},
   publisher = {Springer, Heidelberg},
   series = {Springer Series in Statistics},
-  timestamp = {2015-10-26T17:46:38.000+0100},
   title = {Statistics for high-dimensional data},
-  url = {http://dx.doi.org/10.1007/978-3-642-20192-9},
   year = 2011
 }
 
@@ -111,9 +88,6 @@ year = "2012"
   }
 
 @article{stefanski1987,
- ISSN = {00063444},
- URL = {http://www.jstor.org/stable/2336464},
- abstract = {This paper studies estimation in generalized linear models in canonical form when the explanatory vector is measured with independent normal error. For the functional case, i.e. when the explanatory vectors are fixed constants, unbiased score functions are obtained by conditioning on certain sufficient statistics. This work generalizes results obtained by the authors (Stefanski & Carroll, 1985) for logistic regression. In the case that the explanatory vectors are independent and identically distributed with unknown distribution, efficient score functions are identified. Related results for the structural case are given by Bickel & Ritov (1987).},
  author = {Leonard A. Stefanski and Raymond J. Carroll},
  journal = {Biometrika},
  number = {4},
@@ -127,7 +101,6 @@ year = "2012"
 
 @article{candes2007,
 author = "Candes, Emmanuel and Tao, Terence",
-doi = "10.1214/009053606000001523",
 fjournal = "The Annals of Statistics",
 journal = "Ann. Statist.",
 month = "12",
@@ -135,7 +108,6 @@ number = "6",
 pages = "2313--2351",
 publisher = "The Institute of Mathematical Statistics",
 title = "The Dantzig selector: Statistical estimation when p is much larger than n",
-url = "https://doi.org/10.1214/009053606000001523",
 volume = "35",
 year = "2007"
 }
@@ -148,16 +120,12 @@ journal = {Biometrika},
 volume = {96},
 number = {2},
 pages = {323-337},
-year = {2009},
-doi = {10.1093/biomet/asp013},
-URL = { + http://dx.doi.org/10.1093/biomet/asp013},
-eprint = {/oup/backfile/content_public/journal/biomet/96/2/10.1093/biomet/asp013/2/asp013.pdf}
+year = {2009}
 }
 
 @Manual{flare_package,
     title = {flare: Family of Lasso Regression},
     author = {Xingguo Li and Tuo Zhao and Lie Wang and Xiaoming Yuan and Han Liu},
     year = {2014},
-    note = {R package version 1.5.0},
-    url = {https://CRAN.R-project.org/package=flare},
+    note = {R package version 1.5.0}
   }
