Started working on MU Selector

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -129,3 +129,25 @@ year = {2009}
     year = {2014},
     note = {R package version 1.5.0}
   }
+
+@article{rosenbaum2010,
+  author = "Rosenbaum, Mathieu and Tsybakov, Alexandre B.",
+  fjournal = "The Annals of Statistics",
+  journal = "Ann. Statist.",
+  month = "10",
+  number = "5",
+  pages = "2620--2651",
+  title = "Sparse recovery under matrix uncertainty",
+  volume = "38",
+  year = "2010"
+}
+
+@article{sorensen2018,
+  author = {Oystein Sorensen and Kristoffer Herland Hellton and Arnoldo Frigessi and Magne Thoresen},
+  title = {Covariate Selection in High-Dimensional Generalized Linear Models With Measurement Error},
+  journal = {Journal of Computational and Graphical Statistics},
+  year  = {2018},
+  publisher = {Taylor & Francis}
+}
+
+
