Made the fit_mus work, and wrote about GMUS in vignette

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -151,3 +151,10 @@ year = {2009}
 }
 
 
+@Manual{theussl2017,
+    title = {Rglpk: R/GNU Linear Programming Kit Interface},
+    author = {Stefan Theussl and Kurt Hornik},
+    year = {2017},
+    note = {R package version 0.6-3},
+    url = {https://CRAN.R-project.org/package=Rglpk},
+  }
