--- a/vignettes/hdme-package.Rmd
+++ b/vignettes/hdme-package.Rmd
@@ -404,6 +404,8 @@ The Matrix Uncertainty Selector (MUS) was introduced by @rosenbaum2010 as a modi
 $$
 \text{minimize } ~ \|\beta\|_{1}, ~ \text{ subject to }  ~ (1/n)\| W^{T} (y - W\beta)\|_{\infty} \leq \lambda + \delta \|\beta\|_{1}.
 $$
+Note that the MUS does not require an estimate of the measurement error covariance matrix $\Sigma_{uu}$. This might be a practical advantage in some cases, when an estimate of $\Sigma_{uu}$ is hard to obtain.
+
 The MUS can be converted to a linear programming problem (@sorensen2018). The `hdme` package contains a function `fit_mus` for computing the Matrix Uncertainty Selector. It uses `Rglpk` (@theuss2017) for solving the underlying linear program. In order to illustrate `fit_mus`, we generate som example data with measurement error.
 
 ```{r}
@@ -450,15 +452,49 @@ $$
 $$
 where $\mu(\cdot)$ is the vector valued mean function of the generalized linear model and $\mu^{(r)}(\cdot)$ is its $r$th derivative. $R$ is a parameter controling the number of Taylor expansion terms which are included. When $R\to\infty$, the true solution is a member of the feasible set given that the bounds $(1/n)\|W^{T}\epsilon\|_{\infty} \leq \lambda$ and $\|U\|_{\infty} \leq \delta$ hold. In practice, we set $R=1$ for computational reasons. When $R=1$, the GMUS can be solved using a sequence of linear programming problems on the same form as the MUS, with an iterative reweighing algorithm.
 
+The `fit_gmus` function in the `hdme` package implements the GMUS for $R=1$, which is defined as
+$$
+\text{minimize } ~ \|\beta\|_{1}, ~ \text{ subject to } ~ (1/n)\|W^{T} (y - \mu(W \beta))\|_{\infty} \leq \lambda + \delta n^{-(1/2)} \|\beta\|_{1} \|\mu^ {(1)}(W\beta)\|_{2}.
+$$
+As the MUS, the GMUS does not require an estimate of $\Sigma_{uu}$.
+
+We illustrate `fit_gmus` using logistic regression. First, we generate some sample data.
+
+```{r}
+set.seed(323)
+n <- 100
+p <- 50
+c(X, W, y, beta, sigmaUU) %<-% create_example_data(n, p, sdU = 0.2, family = "binomial")
+gmus_fit <- fit_gmus(W, y, family = "binomial")
+```
+
+The returned object is again a list with class `gmus`.
+```{r}
+class(gmus_fit)
+str(gmus_fit)
+```
+The model fitting works the same way as for the MUS. A $\lambda$ value is found by running the lasso with the appropriate link function, and taking the value yielding minimum cross-validation loss. A range of $\delta$ values are tried. We can call the `plot` function to study the behavior.
+
+```{r}
+plot(gmus_fit)
+```
+
+Again we see that the number of nonzero coefficients decreases in $\delta$. Following the elbow rule, a reasonable choice for $\delta$ might here be $0.1$. To obtain a final estimate, we might therefore run `fit_gmus` again with this value.
+
+```{r}
+gmus_fit <- fit_gmus(W, y, delta = 0.1, family = "binomial")
+```
+
+The plot will now show the estimated coefficients.
+
+```{r}
+plot(gmus_fit)
+```
+
+
 # Matrix Uncertainty Lasso
-# Interpretation of Results
+A "lasso equivalent" of the Generalized Matrix Uncertainty Selector can also be defined (@rosenbaum2010, @sorensen2018). This algorithm will be added to the `hdme` package.
 
-## Plotting Important Features
-
-## Sensitivity Analysis
-
-- Investigate the impact of measurement error
-- Compare the output of standard methods to the outputs of corrected methods.
 
 
 # References
