Updated vignette, so it mentions gmu_lasso

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -158,3 +158,14 @@ year = {2009}
     note = {R package version 0.6-3},
     url = {https://CRAN.R-project.org/package=Rglpk},
   }
+
+@Article{eddelbuettel2014,
+    title = {RcppArmadillo: Accelerating R with high-performance C++ linear algebra},
+    author = {Dirk Eddelbuettel and Conrad Sanderson},
+    journal = {Computational	Statistics and Data Analysis},
+    year = {2014},
+    volume = {71},
+    month = {March},
+    pages = {1054--1063},
+    url = {http://dx.doi.org/10.1016/j.csda.2013.02.005},
+  }
