Added Poisson option to fit_gmus

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -166,6 +166,5 @@ year = {2009}
     year = {2014},
     volume = {71},
     month = {March},
-    pages = {1054--1063},
-    url = {http://dx.doi.org/10.1016/j.csda.2013.02.005},
+    pages = {1054--1063}
   }
