--- a/README.Rmd
+++ b/README.Rmd
@@ -32,10 +32,7 @@ devtools::install_github("osorensen/hdme")
 ```
 
 ### Note when installing on macOS
-`hdme` depends on `Rglpk`. In order to install `Rglpk` on macOS, you may need to first install `GLPK` with the following command on the command line.
-```{r, engine='bash', eval=FALSE}
-brew install glpk
-```
+`hdme` depends on `Rglpk`. In order to install `Rglpk` on macOS, you may need to first install `GLPK` by issuing `brew install glpk` on the command line.
 
 Then install `Rglpk` using
 ```{r, eval=FALSE}
