--- a/README.Rmd
+++ b/README.Rmd
@@ -32,19 +32,25 @@ devtools::install_github("osorensen/hdme")
 ```
 
 ### Note when installing on macOS
-`hdme` depends on `Rglpk`. In order to install `Rglpk` on macOS, you may need to first install `GLPK` by issuing on the command line.
+The package `Rglpk` is suggested when installing `hdme`. In order to install `Rglpk` on macOS, you may need to first install `GLPK` by issuing the following statement on the command line:
 
 ```{r, engine='bash', eval=FALSE}
 brew install glpk
 ```
 
-
-Then install `Rglpk` using
+Then install `Rglpk`:
 ```{r, eval=FALSE}
 install.packages("Rglpk")
 ```
 
-Then install `hdme` as described above.
+If you are not able to install `Rglpk`, then please install the suggested package `lpSolveAPI` instead, using the command
+```{r, eval=FALSE}
+install.packages("lpSolveAPI")
+```
+
+The functions in `hdme` that use `Rglpk`, will switch to `lpSolveAPI` automatically if the former is not available.
+
+When either `hdme` or `lpSolveAPI` is installed, then install `hdme` using the commands described above.
 
 ## Methods
 hdme provides implementations of the following algorithms:
