--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 
 # hdme
 
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/hdme)](http://cran.r-project.org/package=hdme)
+
 The goal of hdme is to provide penalized regression methods for High-Dimensional Measurement Error problems (errors-in-variables).
 
 ## Installation
