Canonical link in README

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 
 # hdme
 
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/hdme)](http://cran.r-project.org/package=hdme)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/hdme)](https://cran.r-project.org/package=hdme)
 
 The goal of hdme is to provide penalized regression methods for High-Dimensional Measurement Error problems (errors-in-variables).
 
