--- a/README.Rmd
+++ b/README.Rmd
@@ -33,28 +33,9 @@ install.packages("hdme")
 You can install the latest development version from github with:
 
 ```{r gh-installation, eval = FALSE}
-# install.packages("devtools")
-devtools::install_github("osorensen/hdme")
+# install.packages("remotes")
+remotes::install_github("osorensen/hdme", build_vignettes = TRUE)
 ```
-
-### Note when installing on macOS
-The package `Rglpk` is suggested when installing `hdme`. In order to install `Rglpk` on macOS, you may need to first install `GLPK` by issuing the following statement on the command line:
-
-```{r, engine='bash', eval=FALSE}
-brew install glpk
-```
-
-Then install `Rglpk`:
-```{r, eval=FALSE}
-install.packages("Rglpk")
-```
-
-If you are not able to install `Rglpk`, then please install the suggested package `lpSolveAPI` instead, using the command
-```{r, eval=FALSE}
-install.packages("lpSolveAPI")
-```
-
-The functions in `hdme` that use `Rglpk`, will switch to `lpSolveAPI` automatically if the former is not available.
 
 
 ## Methods
