Ready for new version

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,8 +33,8 @@ install.packages("hdme")
 You can install the latest development version from github with:
 
 ```{r gh-installation, eval = FALSE}
-# install.packages("remotes")
-remotes::install_github("osorensen/hdme", build_vignettes = TRUE)
+# install.packages("devtools")
+devtools::install_github("osorensen/hdme", build_vignettes = TRUE)
 ```
 
 
